Fixed both the video and audio (not perfect but way better). Revert semaphore. There has to be a better way to do the timing.

--- a/SoftVMS/SoftVMS-Info.plist
+++ b/SoftVMS/SoftVMS-Info.plist
@@ -25,7 +25,7 @@
 	<key>NSPrincipalClass</key>
 	<string>OEGameCoreController</string>
 	<key>OEGameCoreClass</key>
-	<string>VMUGameCore</string>
+	<string>SoftVMSGameCore</string>
 	<key>OEGameCorePlayerCount</key>
 	<string>1</string>
 	<key>OEProjectURL</key>
